[package]
name = "eth-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-eips = "=0.1.2"
alloy = { version = "0.2", features = ["full"] }
futures = "0.3.30"
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.15"
ethers = "2.0"
serde = "1.0.209"
serde_json = "=1.0"
