[package]
name = "eth-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2", features = ["full"] }
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.30"
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.15"
rusqlite = "0.31.0"
serde_json = "1.0.127"
tempfile = "3.12.0"
